base for scatter and bargraph

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<label for="attributesSelect">Select Attribute 1:</label>
 					</div>
 					<div class="col-75">
-						<select id="attributesSelect">
+						<select id="attributesSelect1">
 							<option value="cnty_fips">County FIPS</option>
 							<option value="display_name">Display Name</option>
 							<option value="poverty_perc">Poverty Percentage</option>
@@ -44,7 +44,7 @@
 						<label for="attributesSelect">Select Attribute 2:</label>
 					</div>
 					<div class="col-75">
-						<select id="attributesSelect">
+						<select id="attributesSelect2">
 							<option value="cnty_fips">County FIPS</option>
 							<option value="display_name">Display Name</option>
 							<option value="poverty_perc">Poverty Percentage</option>
@@ -76,6 +76,7 @@
 							<option value="histogram">Histogram</option>
 							<option value="scatterplot">Scatter Plot</option>
 							<option value="choropleth">Choropleth</option>
+							<option value="scatterplot">scatterplot</option>
 						</select>
 					</div>
 				</div>
@@ -92,6 +93,7 @@
 				<!-- more to come -->
 			</div>
 		</main>
+      <script src="https://d3js.org/d3.v6.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 </html>
