--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
 				<!-- more to come -->
 			</div>
 		</main>
+      <footer>
+      <h2>This data is pulled from the US Heart and Stroke Atlas <a href="https://www.cdc.gov/dhdsp/maps/atlas/index.htm"> Here. </a> </h2>
+      <h3>This visualization uses d3.js library to create the graphs demanded by the user.</h3>
+   </footer>
+      
       <script src="https://d3js.org/d3.v6.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
