tooltip added to scatterplot

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                <li class="legend-btn" rural_urban="Urban"><span class="legend-symbol"></span> Urban</li>
            </ul>
 
+           <div id="tooltip"></div>
+
 				<svg id=" choropleth"></svg>
 			</div>
 		</main>
