--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
         <script src="js/topojson.v3.js"></script>
         <script src="https://d3js.org/d3.v6.min.js"></script>
-        <script src="js/script.js"></script>
+        <script src="js/scatterplot.js"></script>
         <script src="js/main.js"></script>
         <script src="js/choropleth.js"></script>
         <script src="js/choropleth2.js"></script>
