--- a/index.html
+++ b/index.html
@@ -150,5 +150,6 @@
         <script src="js/choropleth2.js"></script>
         <script src="js/bars.js"></script>
         <script src="js/bars2.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
