--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                 </div>
 
                 <div class="row">
+                    <button id="refreshButton">Refresh</button>
                     <button id="submit-btn">Submit</button>
+
                 </div>
             </form>
         </div>
