added legend to choropleth

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <main>
             <div class="visualization-container">
                 <h1>Correlation visualization (Scatterplot)</h1>
+                <div class="scatterplot-container">
                 <svg id="scatterplot"></svg>
                 <ul class="legend">
                     <li class="legend-btn" rural_urban="Rural"><span class="legend-symbol"></span> Rural</li>
@@ -83,6 +84,7 @@
                     <li class="legend-btn" rural_urban="Urban"><span class="legend-symbol"></span> Urban</li>
                 </ul>
                 <div id="tooltip"></div>
+            </div>
                 
 
                 <!-- ************MAPS************* -->
@@ -143,7 +145,7 @@
                 <div class="row-map">
 
                     <div class="column" >
-                        <h2 id="att1">Attribute 1</h2>
+                        <h2 id="att1">Attribute 2</h2>
                         <div id="histogram" ></div>
                     </div>
                     
